nobase_include_HEADERS=\
	cnavi/navi_bsession.h\
	cnavi/navi_common_define.h\
	cnavi/navi_log.h\
	cnavi/navi_simple_array.h\
	cnavi/navi_pool.h\
	cnavi/navi_simple_hash.h\
	cnavi/navi_buf_chain.h\
	cnavi/navi_request.h\
	cnavi/navi_module.h\
	cnavi/navi_gr_iter.h\
	cnavi/navi_timer_mgr.h\
	cnavi/navi_req_trace.h\
	cnavi/navi_response.h\
	cnavi/navi_formdata_post.h\
	cnavi/navi_list.h\
	cnavi/navi_inner_util.h\
	cnavidriver/navi_module_driver.h\
	cnavidriver/navi_request_driver.h\
	cnavidriver/navi_module_mgr.h\
	cnaviproxy/navi_upserver.h\
	cnaviproxy/navi_upgroup_mgr.h\
	cnaviproxy/navi_upredis.h\
	cnaviproxy/navi_upnavi.h\
	cnaviproxy/navi_upreq.h\
	cnaviproxy/navi_upreq_inbuf.h\
	cnaviproxy/navi_upgroup.h\
	cnaviproxy/navi_uphttp.h\
	cnaviproxy/navi_uppolicy_query.h\
	cnaviproxy/navi_redis_notify.h\
	cnaviproxy/navi_pipe.h\
	cnaviproxy/navi_vevent_mgr.h\
	cnaviproxy/navi_upproto_redis.h\
	cnavitask/navi_task.h\
	cnavitask/navi_async_conn.h\
	cnavitask/navi_bg_job.h\
	cnavitask/nvcli_common.h\
	cnavitask/navi_task_mgr.h\
	cnavitask/navi_grcli.h\
	cnavitask/nvcli_http.h\
	cnavitask/nvcli_redis.h\
	cnaviutil/curl_cli.h\
	cnaviutil/navi_static_content.h\
	cnaviutil/exec_util.h\
	cnaviutil/file_monitor.h\
	cnaviutil/navi_local_redis_resolve.h\
	#end
